package Model;

public interface Monitoravel {
    void monitorar();
}
